# tos_options

./: .dockerignore  .gitattributes  .gitignore  2026-04-09-StockAndOptionQuoteForSPX_anal.csv  CHANGELOG.md  Dockerfile  FEATURES.md  GEX_FIXES.md  NIGHTLY_WORKFLOW.md  README.md  SETUP.md  TOS_README.md  auth_demo.py  cli.py  deploy.ps1  docker-compose.yml  fetch_options.py  flow_test.md  get_spy_options.py  gex_audit_report.md  kilo.jsonc  market_report.py  massive_calendar_analysis.py  options_analysis_readme.md  pyproject.toml  requirements.txt  run_iv_skew.sh  schwab.md  sector-buckets.md  test_connection.py  tokens.json  viz_from_csv.py  workflow.md
0dte/: README.md
algo/: AUDIT.md  README.md  __init__.py  config.py  display.py  earnings_filter.py  generators.py  iv_rank_filter.py  pipeline.py  risk_manager.py  scoring.py  stop_loss.py  trend_filter.py  types.py  wall_detector.py  wall_proximity.py
buckets/: 01_liquidity_analysis.md  02_iv_analysis.md  03_correlation_analysis.md  04_earnings_analysis.md  05_bidirectional_strategies.md  correlation_analysis.py
config/: dynamic_tickers.json  watchlist.yaml
discord/: __init__.py  webhook.py
gex/: __init__.py  calculations.py  chart.py  iv_term.py  storage.py
options-backtest/: README.md  STRATEGY.md  backtest.py  download.py  ingest.py  report.py  strategy.py  test_strategy.py  trade_list.py  trade_log.py
options_analysis/: __init__.py  config.py  constants.py  engine.py  models.py  natenberg_option_volatility_and_pricing.txt  options_analysis_readme.md  regime.py  safeguards.py  trade_suggestion.py  (+2 more)
(+130 files in other folders)
